--- a/apacheVirtualHost.conf
+++ b/apacheVirtualHost.conf
@@ -1,14 +1,15 @@
-<VirtualHost LOCALIPHERE:443>
-DocumentRoot /var/www
+<VirtualHost *:443>
+WSGIDaemonProcess FQDN here processes=1
+WSGIProcessGroup FQDN here
 WSGIScriptAlias / /var/www/plex/server.wsgi
-<Directory "/var/www">
-        Order deny,allow
-        Allow from all
+<Directory /var/www>
+Order deny,allow
+Allow from all
 Options None
 Require all granted
 </Directory>
 SSLEngine on
 SSLCertificateFile /etc/ssl/certs/server.crt
 SSLCertificateKeyFile /etc/ssl/private/server.key
-ServerName FQDNHERE
+ServerName FQDN here
 </VirtualHost>
